Test fix